[project]
name = "diffod"
version = "0.1.0"
description = "Orbit determination using differentiable programming"
authors = [
    {name = "Michael R Johansen",email = "michaerj03@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "torch",
    "dsgp4",
    "astropy",
    "einops",
    "pytest",
    "requests",
    "polars (>=1.38.1,<2.0.0)",
    "pandas (>=3.0.1,<4.0.0)",
    "pyarrow (>=23.0.1,<24.0.0)",
    "scipy (>=1.17.1,<2.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.0,<0.16.0)"
]
