[project]
name = "torch_sgp4"
version = "0.1.0"
description = "Orbit determination using differentiable programming"
authors = [
    {name = "Michael R Johansen",email = "michaerj03@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}  # or another license
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch",
    "dsgp4",
    "astropy",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.0,<0.16.0)",
    "pytest"
]
