[project]
name = "torch_od"
version = "0.1.0"
description = "Orbit determination using differentiable programming"
authors = [
    {name = "Michael R Johansen",email = "michaerj03@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}  # or another license
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch",
    "dsgp4",
    "astropy",
    "sympy (>=1.14.0,<2.0.0)",
    "scipy (>=1.17.1,<2.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "numba (>=0.64.0,<0.65.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.0,<0.16.0)",
    "pytest"
]
